--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_definitions(-DBOOST_LOG_DYN_LINK)
-find_package(Boost 1.54 COMPONENTS log REQUIRED)
+find_package(Boost 1.54 COMPONENTS log system REQUIRED)
 find_package(Threads)
 add_definitions(-Wall -Wconversion)
 
-target_link_libraries(ircvpn ${Boost_LOG_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 add_executable (ircvpn main.cpp irc_vpn.cpp tun_device.cpp)
+target_link_libraries(ircvpn ${Boost_LOG_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
