--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,5 @@ find_package(Boost 1.54 COMPONENTS log system REQUIRED)
 find_package(Threads)
 add_definitions(-Wall -Wconversion)
 
-add_executable (ircvpn main.cpp irc_vpn.cpp tun_device.cpp)
+add_executable (ircvpn main.cpp irc_vpn.cpp tun_device.cpp irc_client.cpp)
 target_link_libraries(ircvpn ${Boost_LOG_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
